--- a/main/src/app/components/camera-capture/camera-capture.component.html
+++ b/main/src/app/components/camera-capture/camera-capture.component.html
@@ -6,7 +6,7 @@
     <video #video autoplay></video>
     <canvas #canvas></canvas>
   </mat-card-content>
-  <mat-card-actions>
+  <mat-card-actions align="end">
     <button mat-raised-button color="primary" (click)="capture()">Tomar Foto</button>
   </mat-card-actions>
 </mat-card>
