--- a/main/src/app/pages/starter/starter.component.html
+++ b/main/src/app/pages/starter/starter.component.html
@@ -6,21 +6,6 @@
 
       <!--steps-->
       <mat-stepper [linear]="isLinear" orientation="vertical" #stepper>
-        <mat-step [stepControl]="primerFormGroup">
-          <form [formGroup]="primerFormGroup">
-            <ng-template matStepLabel>Paso 1</ng-template>
-            <mat-form-field>
-              <mat-label>Por favor envía tu ubicación</mat-label>
-              <input matInput formControlName="ubicacion" placeholder="Ex. 1 Main St, New York, NY"
-                     required>
-            </mat-form-field>
-            <div>
-
-              <button mat-button matStepperNext>Siguiente</button>
-            </div>
-          </form>
-        </mat-step>
-
         <mat-step [stepControl]="segundoFormGroup" label="Paso 2">
           <form [formGroup]="segundoFormGroup">
             <mat-label>¿La matrícula está a nombre del tomador del seguro?</mat-label>
@@ -30,8 +15,8 @@
               <mat-radio-button value="2">No</mat-radio-button>
             </mat-radio-group>
             <div>
-              <button mat-button matStepperPrevious>Regresar</button>
-              <button mat-button matStepperNext>Siguiente</button>
+              <button mat-stroked-button matStepperPrevious>Regresar</button>
+              <button mat-stroked-button matStepperNext>Siguiente</button>
             </div>
           </form>
         </mat-step>
@@ -40,13 +25,16 @@
           <form [formGroup]="terceroFormGroup">
             <mat-label>Muchas gracias, ahora por favor toma una fotografía legible frontal de la matricula, allí podrás ver los datos del vehículo.</mat-label>
             <br>
+            <br>
             <button mat-raised-button color="primary" (click)="openCameraDialog(3)">
+              <mat-icon>photo_camera</mat-icon>
               Cámara</button>
+            <br>
             <br>
              <img *ngIf="matriculaFrontalPhoto" [src]="matriculaFrontalPhoto" alt="Foto Matricula" width="50%"/>
             <div>
-              <button mat-button matStepperPrevious>Regresar</button>
-              <button mat-button matStepperNext>Siguiente</button>
+              <button mat-stroked-button matStepperPrevious>Regresar</button>
+              <button mat-stroked-button matStepperNext>Siguiente</button>
             </div>
           </form>
         </mat-step>
@@ -55,13 +43,16 @@
         <form [formGroup]="cuartoFormGroup">
           <mat-label>Muchas gracias, ahora por favor toma una fotografía legible posterior de la matrícula, allí podrás ver los datos del dueño del vehículo.</mat-label>
           <br>
+          <br>
           <button mat-raised-button color="primary" (click)="openCameraDialog(4)">
+            <mat-icon>photo_camera</mat-icon>
             Cámara</button>
+          <br>
           <br>
           <img *ngIf="matriculaPosteriorPhoto" [src]="matriculaPosteriorPhoto" alt="Foto Matricula" width="50%"/>
           <div>
-            <button mat-button matStepperPrevious>Regresar</button>
-            <button mat-button matStepperNext>Siguiente</button>
+            <button mat-stroked-button matStepperPrevious>Regresar</button>
+            <button mat-stroked-button matStepperNext>Siguiente</button>
           </div>
         </form>
       </mat-step>
@@ -70,13 +61,16 @@
         <form [formGroup]="quintoFormGroup">
           <mat-label>Envíe la foto del número de chasis del vehículo</mat-label>
           <br>
+          <br>
           <button mat-raised-button color="primary" (click)="openCameraDialog(5)">
+            <mat-icon>photo_camera</mat-icon>
             Cámara</button>
+          <br>
           <br>
           <img *ngIf="chasisPhoto" [src]="chasisPhoto" alt="Foto Chasis" width="50%"/>
           <div>
-            <button mat-button matStepperPrevious>Regresar</button>
-            <button mat-button matStepperNext>Siguiente</button>
+            <button mat-stroked-button matStepperPrevious>Regresar</button>
+            <button mat-stroked-button matStepperNext>Siguiente</button>
           </div>
         </form>
       </mat-step>
@@ -85,13 +79,16 @@
         <form [formGroup]="sextoFormGroup">
           <mat-label>Muchas gracias, por favor toma una fotografía de la parte frontal del vehículo, asegúrate que en la imagen se vean los retrovisores.</mat-label>
           <br>
+          <br>
           <button mat-raised-button color="primary" (click)="openCameraDialog(6)">
+            <mat-icon>photo_camera</mat-icon>
             Cámara</button>
+          <br>
           <br>
           <img *ngIf="frontalVehiculoPhoto" [src]="frontalVehiculoPhoto" alt="Foto Frontal" width="50%"/>
           <div>
-            <button mat-button matStepperPrevious>Regresar</button>
-            <button mat-button matStepperNext>Siguiente</button>
+            <button mat-stroked-button matStepperPrevious>Regresar</button>
+            <button mat-stroked-button matStepperNext>Siguiente</button>
           </div>
         </form>
       </mat-step>
@@ -100,33 +97,191 @@
         <form [formGroup]="septimoFormGroup">
           <mat-label>Muchas gracias, ahora por favor toma una fotografía de la parte posterior del vehículo, asegúrate que en la imagen se vean los faros posteriores.</mat-label>
           <br>
+          <br>
           <button mat-raised-button color="primary" (click)="openCameraDialog(7)">
+            <mat-icon>photo_camera</mat-icon>
             Cámara</button>
+          <br>
           <br>
           <img *ngIf="posteriorVehiculoPhoto" [src]="posteriorVehiculoPhoto" alt="Foto Posterior" width="50%"/>
           <div>
-            <button mat-button matStepperPrevious>Regresar</button>
-            <button mat-button matStepperNext>Siguiente</button>
+            <button mat-stroked-button matStepperPrevious>Regresar</button>
+            <button mat-stroked-button matStepperNext>Siguiente</button>
           </div>
         </form>
       </mat-step>
 
       <!--8-->
-      <mat-step [stepControl]="septimoFormGroup" label="Paso 8">
-        <form [formGroup]="septimoFormGroup">
+      <mat-step [stepControl]="octavoFormGroup" label="Paso 8">
+        <form [formGroup]="octavoFormGroup">
           <mat-label>Muchas gracias, ahora por favor toma una fotografía de la parte lateral izquierda del vehículo, asegúrate que en la fotografía se vean los faros delanteros y traseros.</mat-label>
           <br>
+          <br>
           <button mat-raised-button color="primary" (click)="openCameraDialog(8)">
+            <mat-icon>photo_camera</mat-icon>
             Cámara</button>
+          <br>
           <br>
           <img *ngIf="izquierdaVehiculoPhoto" [src]="izquierdaVehiculoPhoto" alt="Foto Izquierda" width="50%"/>
           <div>
-            <button mat-button matStepperPrevious>Regresar</button>
-            <button mat-button matStepperNext>Siguiente</button>
+            <button mat-stroked-button matStepperPrevious>Regresar</button>
+            <button mat-stroked-button matStepperNext>Siguiente</button>
           </div>
         </form>
       </mat-step>
 
+      <!--9-->
+      <mat-step [stepControl]="novenoFormGroup" label="Paso 9">
+        <form [formGroup]="novenoFormGroup">
+          <mat-label>Ahora, por favor toma una fotografía del tablero del vehículo, allí podrás ver desde el volante hasta la guantera en una sola imagen.</mat-label>
+          <br>
+          <br>
+          <button mat-raised-button color="primary" (click)="openCameraDialog(9)">
+            <mat-icon>photo_camera</mat-icon>
+            Cámara</button>
+          <br>
+          <br>
+          <img *ngIf="tableroVehiculoPhoto" [src]="tableroVehiculoPhoto" alt="Foto Tablero" width="50%"/>
+          <div>
+            <button mat-stroked-button matStepperPrevious>Regresar</button>
+            <button mat-stroked-button matStepperNext>Siguiente</button>
+          </div>
+        </form>
+      </mat-step>
+      <!--10-->
+      <mat-step [stepControl]="decimoFormGroup" label="Paso 10">
+        <form [formGroup]="decimoFormGroup">
+          <mat-label>Muchas gracias, ahora por favor toma una fotografía en primer plano del panel de instrumentos del vehículo</mat-label>
+          <br>
+          <br>
+          <button mat-raised-button color="primary" (click)="openCameraDialog(10)">
+            <mat-icon>photo_camera</mat-icon>
+            Cámara</button>
+          <br>
+          <br>
+          <img *ngIf="panelVehiculoPhoto" [src]="panelVehiculoPhoto" alt="Foto Panel" width="50%"/>
+          <div>
+            <button mat-stroked-button matStepperPrevious>Regresar</button>
+            <button mat-stroked-button matStepperNext>Siguiente</button>
+          </div>
+        </form>
+      </mat-step>
+
+        <!--11-->
+        <mat-step [stepControl]="onceFormGroup" label="Paso 11">
+          <form [formGroup]="onceFormGroup">
+            <mat-label>Muchas gracias, ahora por favor toma una fotografía en primer plano del kilometraje del total recorrido.</mat-label>
+            <br>
+            <br>
+            <button mat-raised-button color="primary" (click)="openCameraDialog(11)">
+              <mat-icon>photo_camera</mat-icon>
+              Cámara</button>
+            <br>
+            <br>
+            <img *ngIf="tacometroVehiculoPhoto" [src]="tacometroVehiculoPhoto" alt="Foto Tacometro" width="50%"/>
+            <div>
+              <button mat-stroked-button matStepperPrevious>Regresar</button>
+              <button mat-stroked-button matStepperNext>Siguiente</button>
+            </div>
+          </form>
+        </mat-step>
+ <!--12-->
+ <mat-step [stepControl]="doceFormGroup" label="Paso 12">
+  <form [formGroup]="doceFormGroup">
+    <mat-label>Muchas gracias, ahora vamos con los documentos, por favor toma una fotografía legible de la parte frontal de tu cédula.</mat-label>
+    <br>
+    <br>
+    <button mat-raised-button color="primary" (click)="openCameraDialog(12)">
+      <mat-icon>photo_camera</mat-icon>
+      Cámara</button>
+    <br>
+    <br>
+    <img *ngIf="cedulaPhoto" [src]="cedulaPhoto" alt="Foto cedula" width="50%"/>
+    <div>
+      <button mat-stroked-button matStepperPrevious>Regresar</button>
+      <button mat-stroked-button matStepperNext>Siguiente</button>
+    </div>
+  </form>
+</mat-step>
+<!--13-->
+<mat-step [stepControl]="treceFormGroup" label="Paso 13">
+  <form [formGroup]="treceFormGroup">
+    <mat-label>Muchas gracias, ahora por favor toma una fotografía legible de la parte frontal de tu licencia de conducir.</mat-label>
+    <br>
+    <br>
+    <button mat-raised-button color="primary" (click)="openCameraDialog(13)">
+      <mat-icon>photo_camera</mat-icon>
+      Cámara</button>
+    <br>
+    <br>
+    <img *ngIf="licenciaPhoto" [src]="licenciaPhoto" alt="Foto licencia" width="50%"/>
+    <div>
+      <button mat-stroked-button matStepperPrevious>Regresar</button>
+      <button mat-stroked-button matStepperNext>Siguiente</button>
+    </div>
+  </form>
+</mat-step>
+
+<!--14-->
+<mat-step [stepControl]="catorceFormGroup" label="Accesorios">
+  <form [formGroup]="catorceFormGroup">
+    <mat-label>Accesorios</mat-label>
+
+    <div>
+      <button mat-stroked-button matStepperPrevious>Regresar</button>
+      <button mat-stroked-button matStepperNext>Siguiente</button>
+    </div>
+  </form>
+</mat-step>
+<!--18-->
+<mat-step [stepControl]="diezochoFormGroup" label="Paso 18">
+  <form [formGroup]="diezochoFormGroup">
+    <mat-label>¿Tu vehículo tiene algún golpe, rayón, raspadura, abolladura, vidrios rotos o trizados, desgaste en pintura o cualquier tipo de daño?</mat-label>
+            <br>
+            <mat-radio-group formControlName="tieneDaniosVehiculo" aria-label="Select an option">
+              <mat-radio-button value="1">Si</mat-radio-button>
+              <mat-radio-button value="2">No</mat-radio-button>
+            </mat-radio-group>
+            <div>
+              <button mat-stroked-button matStepperPrevious>Regresar</button>
+              <button mat-stroked-button matStepperNext>Siguiente</button>
+            </div>
+  </form>
+</mat-step>
+
+ <!--19-->
+ <mat-step [stepControl]="diezNueveFormGroup" label="Paso 19">
+  <form [formGroup]="diezNueveFormGroup">
+    <mat-label>Muchas gracias, ahora ingrese una foto del daño del vehículo.</mat-label>
+    <br>
+    <br>
+    <button mat-raised-button color="primary" (click)="openCameraDialog(19)">
+      <mat-icon>photo_camera</mat-icon>
+      Cámara</button>
+    <br>
+    <br>
+    <img *ngIf="danioVehiculoPhoto" [src]="danioVehiculoPhoto" alt="Foto Vehiculo Danio" width="50%"/>
+    <div>
+      <button mat-stroked-button matStepperPrevious>Regresar</button>
+      <button mat-stroked-button matStepperNext>Siguiente</button>
+    </div>
+  </form>
+</mat-step>
+<!--20-->
+<mat-step [stepControl]="veinteFormGroup" label="Paso 20">
+  <form [formGroup]="veinteFormGroup">
+    <mat-label>Por favor, agregue la descripción del problema.</mat-label>
+    <br>
+    <mat-form-field>
+      <mat-label>Descripción</mat-label>
+      <input matInput placeholder="Descripción" formControlName="problemaVehiculo" required>
+    </mat-form-field>
+    <div>
+      <button mat-stroked-button matStepperPrevious>Regresar</button>
+      <button mat-stroked-button matStepperNext>Siguiente</button>
+    </div>
+  </form>
+</mat-step>
         <mat-step>
           <ng-template matStepLabel>Registro</ng-template>
           <p>Gracias por usar nuestro servicio. Hasta la próxima.</p>
