--- a/main/src/app/pages/starter/starter.component.html
+++ b/main/src/app/pages/starter/starter.component.html
@@ -11,8 +11,8 @@
             <mat-label>¿La matrícula está a nombre del tomador del seguro?</mat-label>
             <br>
             <mat-radio-group formControlName="matriculaNombreDelTomador" aria-label="Select an option">
-              <mat-radio-button value="1">Si</mat-radio-button>
-              <mat-radio-button value="2">No</mat-radio-button>
+              <mat-radio-button value="Si">Si</mat-radio-button>
+              <mat-radio-button value="No">No</mat-radio-button>
             </mat-radio-group>
             <div>
               <button mat-stroked-button matStepperPrevious>Regresar</button>
@@ -225,8 +225,68 @@
 <!--14-->
 <mat-step [stepControl]="catorceFormGroup" label="Accesorios">
   <form [formGroup]="catorceFormGroup">
-    <mat-label>Accesorios</mat-label>
+    <mat-label>Desea declarar accesorios extra del vehículo?</mat-label>
+    <br>
+    <mat-radio-group formControlName="tieneAccesorio" aria-label="Select an option">
+      <mat-radio-button value="Si">Si</mat-radio-button>
+      <mat-radio-button value="No">No</mat-radio-button>
+    </mat-radio-group>
+    <br>
+    <mat-card class="cardWithShadow theme-card" *ngIf="ReactiveFrmCatorceFormGroup.tieneAccesorio.value=='Si' ">
+      <mat-card-header>
+        <mat-card-title class="m-b-0">Nuevo Accesorio</mat-card-title>
+      </mat-card-header>
+      <mat-card-content class="b-t-1">
+        <form [formGroup]="nuevoAccesorioFormGroup">
+          <mat-label>Por favor, toma una foto del nuevo accesorio que deseas declarar.</mat-label>
+          <br>
+          <br>
+          <button mat-raised-button color="primary" (click)="openCameraDialog(14)">
+            <mat-icon>photo_camera</mat-icon>
+            Cámara</button>
+            <br>
+          <img *ngIf="nuevoAccesorioPhoto" [src]="nuevoAccesorioPhoto" alt="Foto accesorio" width="50%"/>
+          <br>
+            <mat-label>Ingrese el valor del accesorio del vehículo:</mat-label>
+            <mat-form-field class="example-full-width">
+              <input matInput placeholder="0,0$" formControlName="valorAccesorio" type="number" required>
+            </mat-form-field>
+          <br>
+            <mat-label>Por favor, agregue la descripción del accesorio:</mat-label>
+            <br>
+            <mat-form-field class="example-full-width">
+              <textarea matInput  placeholder="Descripción" formControlName="descripcionAccesorio" required></textarea>
 
+            </mat-form-field>
+        </form>
+      </mat-card-content>
+      <mat-card-actions align="end">
+        <button mat-raised-button color="primary" >Agregar</button>
+      </mat-card-actions>
+    </mat-card>
+
+    <table mat-table [dataSource]="listaAccesorios" class="mat-elevation-z8" *ngIf="listaAccesorios.length>0">
+
+      <!-- foto Column -->
+      <ng-container matColumnDef="foto">
+        <th mat-header-cell *matHeaderCellDef> Foto </th>
+        <td mat-cell *matCellDef="let element"> {{element.foto}} </td>
+      </ng-container>
+      <!-- valor Column -->
+      <ng-container matColumnDef="valor">
+        <th mat-header-cell *matHeaderCellDef> Valor </th>
+        <td mat-cell *matCellDef="let element"> {{element.valor}} </td>
+      </ng-container>
+      <!-- descripcion Column -->
+      <ng-container matColumnDef="descripcion">
+        <th mat-header-cell *matHeaderCellDef> Descripción </th>
+        <td mat-cell *matCellDef="let element"> {{element.descripcion}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="columnsAccesorios"></tr>
+      <tr mat-row *matRowDef="let row; columns: columnsAccesorios;"></tr>
+    </table>
+    <br>
     <div>
       <button mat-stroked-button matStepperPrevious>Regresar</button>
       <button mat-stroked-button matStepperNext>Siguiente</button>
@@ -239,8 +299,8 @@
     <mat-label>¿Tu vehículo tiene algún golpe, rayón, raspadura, abolladura, vidrios rotos o trizados, desgaste en pintura o cualquier tipo de daño?</mat-label>
             <br>
             <mat-radio-group formControlName="tieneDaniosVehiculo" aria-label="Select an option">
-              <mat-radio-button value="1">Si</mat-radio-button>
-              <mat-radio-button value="2">No</mat-radio-button>
+              <mat-radio-button value="Si">Si</mat-radio-button>
+              <mat-radio-button value="No">No</mat-radio-button>
             </mat-radio-group>
             <div>
               <button mat-stroked-button matStepperPrevious>Regresar</button>
