--- a/main/src/app/pages/starter/starter.component.html
+++ b/main/src/app/pages/starter/starter.component.html
@@ -261,35 +261,40 @@
         </form>
       </mat-card-content>
       <mat-card-actions align="end">
-        <button mat-raised-button color="primary" >Agregar</button>
+        <button mat-raised-button color="primary" [disabled]="!nuevoAccesorioFormGroup.valid" (click)="agregarAccesorio()" >Agregar</button>
       </mat-card-actions>
     </mat-card>
 
-    <table mat-table [dataSource]="listaAccesorios" class="mat-elevation-z8" *ngIf="listaAccesorios.length>0">
+    <div class="table-responsive">
+      <table mat-table [dataSource]="listaAccesorios" class="mat-elevation-z8" *ngIf="listaAccesorios.length>0">
 
-      <!-- foto Column -->
-      <ng-container matColumnDef="foto">
-        <th mat-header-cell *matHeaderCellDef> Foto </th>
-        <td mat-cell *matCellDef="let element"> {{element.foto}} </td>
-      </ng-container>
-      <!-- valor Column -->
-      <ng-container matColumnDef="valor">
-        <th mat-header-cell *matHeaderCellDef> Valor </th>
-        <td mat-cell *matCellDef="let element"> {{element.valor}} </td>
-      </ng-container>
-      <!-- descripcion Column -->
-      <ng-container matColumnDef="descripcion">
-        <th mat-header-cell *matHeaderCellDef> Descripción </th>
-        <td mat-cell *matCellDef="let element"> {{element.descripcion}} </td>
-      </ng-container>
+        <!-- foto Column -->
+        <ng-container matColumnDef="foto">
+          <th mat-header-cell *matHeaderCellDef style="font-weight: bold;"> Foto </th>
+          <td mat-cell *matCellDef="let element">
+            <img [src]="element.foto" alt="Foto accesorio" width="100px" style="margin-top: 5px;"/>
+          </td>
+        </ng-container>
+        <!-- valor Column -->
+        <ng-container matColumnDef="valor">
+          <th mat-header-cell *matHeaderCellDef style="font-weight: bold;"> Valor </th>
+          <td mat-cell *matCellDef="let element"> {{element.valor}} </td>
+        </ng-container>
+        <!-- descripcion Column -->
+        <ng-container matColumnDef="descripcion">
+          <th mat-header-cell *matHeaderCellDef style="font-weight: bold;"> Descripción </th>
+          <td mat-cell *matCellDef="let element"> {{element.descripcion}} </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="columnsAccesorios"></tr>
-      <tr mat-row *matRowDef="let row; columns: columnsAccesorios;"></tr>
-    </table>
+        <tr mat-header-row *matHeaderRowDef="columnsAccesorios"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnsAccesorios;"></tr>
+      </table>
+    </div>
+
     <br>
     <div>
       <button mat-stroked-button matStepperPrevious>Regresar</button>
-      <button mat-stroked-button matStepperNext>Siguiente</button>
+      <button mat-stroked-button matStepperNext [disabled]="ReactiveFrmCatorceFormGroup.tieneAccesorio.value=='Si' && listaAccesorios.length==0 " >Siguiente</button>
     </div>
   </form>
 </mat-step>
